# TopOpt_in_PETSc_wrapped_in_Python

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Filter.cc  Filter.h  LinearElasticity.cc  LinearElasticity.h  MMA.cc  MMA.h  MPIIO.cc  MPIIO.h  PDEFilter.cc  README.rst  TopOpt.cc  TopOpt.h  Triangle.cpp  Triangle.h  V3.cpp  V3.h  Voxelizer.cpp  Voxelizer.h  beam.py  bin2vtu.py  bracket.py  femur.py  ivd.py  local.py  loop.cc  makefile  makevtu.py  porousCube.py  post_process_topopt.sh  problem_definition_file.py  roof.py  run_topopt.sh  setup.cfg  setup.py  sphere.py  sphere_full.py  (+5 more)
bracket/: jetEngineSolidDomainFine.stl
cmake-modules/: FindGMP.cmake
examples/: beam.py  beam_local.py  beam_stl.py  bracket.py  femur.py  local.py  multiloads.py  performance.py  porousCube.py  porousVoronoi.py  roof.py  sphere.py  table.py
include/: Filter.h  IO.h  LinearElasticity.h  LocalVolume.h  TopOpt.h  topoptlib.h
input/: box.stl  domaintorsion_bk.stl  domaintorsionfull.stl  hollowsphere_bk.stl  jetEngineDesignDomainFine.stl  rigidtorsion.stl  rigidtorsion_bk.stl  rigidtorsionbig.stl  rigidtorsionbigfull.stl  rigidtorsionbigq.stl  solidtorsion.stl  solidtorsion_bk.stl  sphere.stl  tablesolid.stl  tablesolid_bk.stl  tritext_demo.stl
src/: Filter.cc  IO.cc  LinearElasticity.cc  MMA.cc  MPIIO.cc  TopOpt.cc  loop.cc  main.cc  wrapper.cc
stl/: beam_bk.stl  domaintorsion.stl  domaintorsionfull_bk.stl  domaintorsionq.stl  femur.stl  hollowsphere.stl  jetEngineDesignDomainFine.stl  jetEngineRigidDomainFine.stl  porousCube.stl  porousVoronoi.stl  tabledomain.stl  (+5 more)
(+35 files in other folders)
